--- a/desktop/docs/index.asciidoc
+++ b/desktop/docs/index.asciidoc
@@ -6,7 +6,7 @@ Marvel is a management and monitoring product for Elasticsearch. Marvel
 aggregates cluster wide statistics and events and offers a single interface to
 view and analyze them. Marvel is free for development use but does require a
 license to run in production. For more details, please see the
-http://www.elasticsearch.com/marvel[Marvel product page].
+http://www.elasticsearch.com/products/marvel[Marvel product page].
 
 
 include::dashboards.asciidoc[]
