--- a/desktop/docs/autorefresh.asciidoc
+++ b/desktop/docs/autorefresh.asciidoc
@@ -14,7 +14,7 @@ Filter] in the upper right corner of the menu bar.
 To automatically refresh the data, click the image:images/autorefresh.png[] *Auto-refresh* button and select an 
 autorefresh interval:
 
-image::images/autorefresh-intervals.png
+image:images/autorefresh-intervals.png[]
 
 When auto-refresh is enabled, Kibana's top bar displays a pause button and the auto-refresh interval: 
 image:images/autorefresh-pause.png[]. Click the *Pause* button to pause auto-refresh.
