--- a/desktop/docs/plugins.asciidoc
+++ b/desktop/docs/plugins.asciidoc
@@ -77,7 +77,7 @@ Use the `--remove` or `-r` option to remove a plugin, including any configuratio
 example:
 
 [source,shell]
-bin/kibana plugin --remove marvel-ui
+bin/kibana plugin --remove marvel
 
 You can also remove a plugin manually by deleting the plugin's subdirectory under the `installedPlugins` directory.
 
