Updates master with 4.3 docs.

--- a/desktop/docs/plugins.asciidoc
+++ b/desktop/docs/plugins.asciidoc
@@ -121,6 +121,7 @@ path to that configuration file each time you use the `bin/kibana plugin` comman
 74:: I/O error
 70:: Other error
 
+[float]
 [[plugin-switcher]]
 == Switching Plugin Functionality
 
